--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>web-proj</title>
+		<script type="text/javascript">
+			//window.$data={"id":1,"name":"wilson.fu"};
+		</script>
   </head>
   <body>
     <div id="app"></div>
